--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mdui-test1",
+  "name": "sfsinstaller-page",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,7 +9,6 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.20",
     "typescript": "~5.8.3",
     "vite": "^7.0.4"
   },
@@ -17,7 +16,6 @@
     "@mdui/icons": "^1.0.3",
     "axios": "^1.10.0",
     "less": "^4.4.0",
-    "lodash": "^4.17.21",
     "mdui": "^2.1.4"
   }
 }
