从 less 切换到 scss

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@mdui/icons": "^1.0.3",
     "axios": "^1.10.0",
-    "less": "^4.4.0",
-    "mdui": "^2.1.4"
+    "mdui": "^2.1.4",
+    "sass": "^1.89.2"
   }
 }
